kubernetes/mealie/kube/0-mealie-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  # annotations:
  #   linkerd.io/inject: enabled
