kubernetes/mealie/kube/3-mealie-traefik.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie-service-externalname
  namespace: website
spec:
  type: ExternalName
  externalName: mealie-service.mealie.svc.cluster.local
  ports:
  - name: http
    port: 3000
    protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
  namespace: website
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # traefik.ingress.kubernetes.io/router.middlewares: <namespace>-<MiddlewareName>@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: website-https-redirect@kubernetescrd
spec:
  tls:
  - hosts:
    - mealie.brettevrist.net
    - mealie.evri.st
    secretName: brettevrist-net-cert-secret
  defaultBackend:
    service:
      name: mealie-service-externalname
      port:
        number: 3000
  rules:
  - host: mealie.brettevrist.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie-service-externalname
            port:
              number: 3000
  - host: mealie.evri.st
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie-service-externalname
            port:
              number: 3000
